--- a/Rickroll.html
+++ b/Rickroll.html
@@ -11,7 +11,7 @@
 <h1 style="text-align:center; background-color:Red;">Just kidding you have been rickrolled >:)</h1>
 
 <div style="text-align: center;">
-  <video width="80%" height="50%" controls autoplay>
+  <video width="80%" height="50%" controls autoplay muted>
     <source src="rickroll.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
