--- a/WebsiteNotFound.html
+++ b/WebsiteNotFound.html
@@ -1685,7 +1685,7 @@ html[dir='rtl'].offline .icon-offline {
           <span jsselect="heading" jsvalues=".innerHTML:msg" jstcache="9">This site can’t be reached</span>
           <a id="error-information-button" class="hidden" onclick="toggleErrorInformationPopup();" jstcache="0"></a>
         </h1>
-        <p jsselect="summary" jsvalues=".innerHTML:msg" jstcache="1">Check if there is a typo in <span jscontent="hostName" jstcache="22">www.pilosaleltd.com</span>.</p>
+        <p jsselect="summary" jsvalues=".innerHTML:msg" jstcache="1">Check if there is a typo in <span jscontent="hostName" jstcache="22">www.reallyinterestingwebsite.com</span>.</p>
         <!--The suggestion list and error code are normally presented inline,
           in which case error-information-popup-* divs have no effect. When
           error-information-popup-container has the use-popup-container class, this
