--- a/Rickroll.html
+++ b/Rickroll.html
@@ -112,6 +112,11 @@ section {
 </head>
 <body style="background-color:black;">
 <h1 style="text-align:center; background-color:Red;">Just kidding you have been rickrolled >:)</h1>
+	
+<!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+<img src="https://hitwebcounter.com/counter/counter.php?page=15600194&style=0025&nbdigits=5&type=page&initCount=15" title="Counter Widget" Alt="Visit counter For Websites"   border="0" /></a>                                    
+                                    
 <div style="text-align: center;">
   <video width="80%" height="50%" controls autoplay muted>
     <source src="rickroll.mp4" type="video/mp4">
