--- a/Rickroll.html
+++ b/Rickroll.html
@@ -119,10 +119,10 @@ section {
     Your browser does not support the video tag.
   </video>
 </div>
-<!-- hitwebcounter Code START -->
-<a href="https://www.hitwebcounter.com" target="_blank">
-<img src="https://hitwebcounter.com/counter/counter.php?page=15600194&style=0025&nbdigits=5&type=page&initCount=15" title="Counter Widget" Alt="Visit counter For Websites"   border="0" /></a>                                    
-        
+	
+ <a href='https://www.free-counters.org/'>www.free-counters.org</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=edc8c706eaf671f05f4719947f7fe087441caec1'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1220513/t/5"></script>
+	
 <footer class="footer-distributed">
 	<div class="footer-right">
 		<a href="https://www.youtube.com/channel/UCxwR6csXH_f-wnBe6H-KeFw"><i class="fa fa-youtube"></i></a>
