--- a/Rickroll.html
+++ b/Rickroll.html
@@ -120,8 +120,7 @@ section {
   </video>
 </div>
 	
- <a href='https://www.free-counters.org/'>www.free-counters.org</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=edc8c706eaf671f05f4719947f7fe087441caec1'></script>
-<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1220513/t/5"></script>
+<a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fkiranze.github.io%2FJesseGudge%2FRickroll.html&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/></a>
 	
 <footer class="footer-distributed">
 	<div class="footer-right">
