--- a/Rickroll.html
+++ b/Rickroll.html
@@ -120,7 +120,7 @@ section {
   </video>
 </div>
 	
-<a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fkiranze.github.io%2FJesseGudge%2FRickroll.html&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/></a>
+<a href="https://kiranze.github.io/JesseGudge/Rickroll.html"><img alt="Hits" src="https://hits.sh/github.com/silentsoft/hits.svg"/></a>
 	
 <footer class="footer-distributed">
 	<div class="footer-right">
