--- a/Rickroll.html
+++ b/Rickroll.html
@@ -120,7 +120,8 @@ section {
   </video>
 </div>
 	
-<a href="https://kiranze.github.io/JesseGudge/Rickroll.html"><img alt="Hits" src="https://hits.sh/github.com/silentsoft/hits.svg"/></a>
+ <a href='https://www.free-counters.org/'>www.free-counters.org</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=edc8c706eaf671f05f4719947f7fe087441caec1'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1220513/t/5"></script>
 	
 <footer class="footer-distributed">
 	<div class="footer-right">
