--- a/Rickroll.html
+++ b/Rickroll.html
@@ -112,7 +112,9 @@ section {
 </head>
 <body style="background-color:black;">
 <h1 style="text-align:center; background-color:Red;">Just kidding you have been rickrolled >:)</h1>
-	                            
+<a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fkiranze.github.io%2FJesseGudge%2FRickroll.html&count_bg=%23FF0000&title_bg=%23000000&icon=github.svg&icon_color=%23FFFFFF&title=No.+Rickrolled+so+far+%3A%29&edge_flat=false"/></a>
+
+
 <div style="text-align: center;">
   <video width="80%" height="50%" controls autoplay muted>
     <source src="rickroll.mp4" type="video/mp4">
@@ -120,8 +122,6 @@ section {
   </video>
 </div>
 	
- <a href='https://www.free-counters.org/'>www.free-counters.org</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=edc8c706eaf671f05f4719947f7fe087441caec1'></script>
-<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1220513/t/5"></script>
 	
 <footer class="footer-distributed">
 	<div class="footer-right">
