--- a/Rickroll.html
+++ b/Rickroll.html
@@ -124,7 +124,21 @@ section {
   </video>
 </div>
 	
-	
+<script src="https://giscus.app/client.js"
+        data-repo="kiranze/JesseGudge"
+        data-repo-id="R_kgDOL03NjQ"
+        data-category="General"
+        data-category-id="DIC_kwDOL03Njc4CiEMb"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="dark"
+        data-lang="en"
+        crossorigin="anonymous"
+        async>
+</script>	
 <footer class="footer-distributed">
 	<div class="footer-right">
 		<a href="https://www.youtube.com/channel/UCxwR6csXH_f-wnBe6H-KeFw"><i class="fa fa-youtube"></i></a>
