--- a/Rickroll.html
+++ b/Rickroll.html
@@ -110,7 +110,7 @@ section {
 
 <title>YouHaveBeenRickrolled</title>
 </head>
-<body style="background-color:black;">
+<body style="background-color:white;">
 <h1 style="text-align:center; background-color:Red;">Just kidding you have been rickrolled >:)</h1>
 	
 <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fkiranze.github.io%2FJesseGudge%2FRickroll.html&count_bg=%23FF0000&title_bg=%23000000&icon=github.svg&icon_color=%23FFFFFF&title=No.+Rickrolled+so+far+%3A%29&edge_flat=false"/></a>
