--- a/Index.html
+++ b/Index.html
@@ -89,7 +89,7 @@ html {
   }
 }
 </style>
-<!--
+
   <style>/* Copyright 2014 The Chromium Authors
    Use of this source code is governed by a BSD-style license that can be
    found in the LICENSE file. */
@@ -1672,7 +1672,7 @@ html[dir='rtl'].offline .icon-offline {
   }
 }
 </style>
--->
+
   <script>
    function delay() {window.location = "Rickroll.html";}
   </script>
@@ -1764,7 +1764,7 @@ html[dir='rtl'].offline .icon-offline {
     <!-- Show details when hovering over the icon, in case the details are
          hidden because they're too large. -->
     <div class="icon" jstcache="0"></div>
-    <div id="sub-frame-error-details" jsselect="summary" jsvalues=".innerHTML:msg" jstcache="1">Check if there is a typo in <span jscontent="hostName" jstcache="22">www.pilosaleltd.com</span>.</div>
+    <div id="sub-frame-error-details" jsselect="summary" jsvalues=".innerHTML:msg" jstcache="1">Check if there is a typo in <span jscontent="hostName" jstcache="22">www.reallyinterestingwebsite.com</span>.</div>
   </div>
 
   <div id="offline-resources" jstcache="0">
