--- a/Rickroll.html
+++ b/Rickroll.html
@@ -119,7 +119,7 @@ section {
 
 <script>
  // Change the variables below to your liking
- const currentURL = "rickroll.mp4";
+ const currentURL = "Rickroll.html";
  const pageTitle = "Loading...";
  // End of changable variables
  
