--- a/Rickroll.html
+++ b/Rickroll.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RHS12B3RJD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RHS12B3RJD');
+</script>
+	
   <style>
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
 
