--- a/Rickroll.html
+++ b/Rickroll.html
@@ -122,14 +122,16 @@ section {
 </head>
 <body style="background-color:black;">
 <h1 style="text-align:center; background-color:Red;">Just kidding you have been rickrolled >:)</h1>
-	
+<!--	
+Dosn't work anymore :/
 <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fkiranze.github.io%2FJesseGudge%2FRickroll.html&count_bg=%23FF0000&title_bg=%23000000&icon=github.svg&icon_color=%23FFFFFF&title=No.+Rickrolled+so+far+%3A%29&edge_flat=false"/></a>
-
+-->
+	
 <br></br>
 
 <div style="text-align: center;">
   <video width="80%" height="50%" controls autoplay muted>
-    <source src="rickroll.mp4" type="video/mp4">
+    <source src="https://rick.nerial.uk/video.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 </div>
